- fixed bug causing WindowPlacementIndicator to show in wrong position   - adjusted size of resizers used by selection (area in conrners / sides used for resizing)

--- a/src/css/resize.css
+++ b/src/css/resize.css
@@ -167,8 +167,16 @@
     width: var(--resizer-size);
     height: var(--resizer-size);
   }
+
+  .point-small {
+    --resizer-short: calc(20px / 1.7);
+    --resizer-long: calc(40px / 1.7);
+
+    width: calc(var(--resizer-size) / 1.7);
+    height: calc(var(--resizer-size) / 1.7);
+  }
   
-  /* .point-bottom,
+  .point-bottom,
   .point-right,
   .point-top,
   .point-left,
@@ -183,7 +191,7 @@
   .point-bottom-right::before,
   .point-bottom-left::before {
     background-color: green;
-  } */
+  }
   
   .point-top::after,
   .point-top-right::after,
@@ -264,10 +272,10 @@
   .point-bottom-right {
     position: absolute;
     top: 100%;
-    left: calc(100% - 20px);
+    left: calc(100% - var(--resizer-short));
   
-    width: 20px;
-    height: 20px;
+    width: var(--resizer-short);
+    height: var(--resizer-short);
   }
   .point-bottom-right:hover {
     cursor: se-resize;
@@ -275,7 +283,7 @@
   .point-bottom-right::after {
     position: absolute;
     top: 0;
-    left: 20px;
+    left: var(--resizer-short);
   }
   .point-bottom-right::before {
     content: '';
@@ -285,8 +293,8 @@
     bottom: 0;
     
     display: block;
-    width: 20px;
-    height: 40px;
+    width: var(--resizer-short);
+    height: var(--resizer-long);
   }
   .point-container--repositioned .point-bottom-right::after {
     transform: translate(-3px, -3px);
@@ -295,10 +303,10 @@
   .point-top-right {
     position: absolute;
     bottom: 100%;
-    left: calc(100% - 20px);
+    left: calc(100% - var(--resizer-short));
   
-    width: 20px;
-    height: 20px;
+    width: var(--resizer-short);
+    height: var(--resizer-short);
   }
   .point-top-right:hover {
     cursor: ne-resize;
@@ -306,7 +314,7 @@
   .point-top-right::after {
     position: absolute;
     top: 15px;
-    left: 20px;
+    left: var(--resizer-short);
   }
   .point-top-right::before {
     content: '';
@@ -316,8 +324,8 @@
     top: 0;
     
     display: block;
-    width: 20px;
-    height: 40px;
+    width: var(--resizer-short);
+    height: var(--resizer-long);
   }
   .point-container--repositioned .point-top-right::after {
     transform: translate(-3px, 3px);
@@ -328,8 +336,8 @@
     top: 0;
     right: 100%;
   
-    width: 20px;
-    height: 20px;
+    width: var(--resizer-short);
+    height: var(--resizer-short);
   }
   .point-top-left:hover {
     cursor: nw-resize;
@@ -344,11 +352,11 @@
   
     position: absolute;
     left: 0;
-    top: -20px;
+    top: calc(var(--resizer-short) * -1);
     
     display: block;
-    width: 40px;
-    height: 20px;
+    width: var(--resizer-long);
+    height: var(--resizer-short);
   }
   .point-container--repositioned .point-top-left::after {
     transform: translate(3px, 3px);
@@ -359,8 +367,8 @@
     bottom: 0;
     right: 100%;
   
-    width: 20px;
-    height: 20px;
+    width: var(--resizer-short);
+    height: var(--resizer-short);
   }
   .point-bottom-left:hover {
     cursor: ne-resize;
@@ -378,8 +386,8 @@
     top: 100%;
     
     display: block;
-    width: 40px;
-    height: 20px;
+    width: var(--resizer-long);
+    height: var(--resizer-short);
   }
   .point-container--repositioned .point-bottom-left::after {
     transform: translate(3px, -3px);
